cmake_minimum_required(VERSION 3.10)
project(vulkaninit)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++17 ")
find_package(Vulkan REQUIRED)
find_package(glfw3 REQUIRED)
find_package(glm REQUIRED)
add_executable(${PROJECT_NAME} vulkaninit.cpp)
target_link_libraries(${PROJECT_NAME} Vulkan::Vulkan)
target_link_libraries (${PROJECT_NAME} glfw)